# MyStuff

./: CMakeLists.txt  README.md
cluster.d/: CMakeLists.txt  cluster.cpp  kdtree.h
cluster3D.d/: CMakeLists.txt  cluster.cpp  kd3Dtree.h
downsample.d/: CMakeLists.txt  table_scene_lms400.pcd  voxel_grid.cpp
eigenv.d/: CMakeLists.txt  box.cpp  links.sh  main.cpp  pca.h  pca.tpp
eigenv.d/backup.d/: CMakeLists.txt  box.cpp  box_cviewer.cpp
ransac.d/: CMakeLists.txt  ransac2d.cpp  ransac2d.cpp.backup
segmentation.d/: CMakeLists.txt  extract_indices.cpp  planar_segmentation.cpp
src/: environment.cpp  kd3Dtree.h  pca.cpp  pca.h  pca.tpp  processPointClouds.cpp  processPointClouds.h
src.d/: environment.cpp  processPointClouds.cpp  processPointClouds.h
src.d/sensors/: lidar.h
template.d/: CMakeLists.txt  header.h  main.cpp  template.cpp  template.h  template.tpp
